<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stephan.drivesign_off.ds.DSLoginActivity" >

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="99"
        android:showAsAction="never" />
    <item android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add"
        android:orderInCategory="50"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_wizard"
        android:title="@string/action_wizard"
        android:orderInCategory="51"
        android:showAsAction="ifRoom" />
</menu>
