<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.stephan.drivesign_off.ds.WizardActivity">

    <TextView
        android:text="@string/step_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/step_one"
        android:textSize="20sp"
        android:layout_alignParentTop="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/step_two"
        android:layout_alignParentEnd="true"
        android:onClick="onConfirmNewFileButtonClicked"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_two"
        android:id="@+id/step_two"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/step_one"
        android:layout_toRightOf="@+id/step_two"
        android:layout_marginTop="62dp"
        android:layout_alignEnd="@+id/button"
        android:hint="fill in amount of weeks"
        android:inputType="number" />

</RelativeLayout>
